Added more to the header

--- a/landing-page.html
+++ b/landing-page.html
@@ -48,5 +48,18 @@
       </div>
     </div>
 
+    <div class="flex-container">
+      <div class="flex-item">
+        <h2>This website is awesome.</h2>
+
+        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+
+        <div class="button">Sign up!</div><!-- For now -->
+      </div>
+      <div class="flex-item">
+        <div class=""><img src="https://i.imgur.com/DRciR0h.jpg" /></div>
+      </div>
+    </div>
+
   </body>
 </html>
