--- a/landing-page.html
+++ b/landing-page.html
@@ -33,6 +33,13 @@
         padding:4px;
       }
 
+      .flex-item-2{
+        background-color:peachpuff;
+        border:4px solid salmon;
+        flex:1;
+        padding:4px;
+      }
+
     </style>
 
   </head>
@@ -49,15 +56,15 @@
     </div>
 
     <div class="flex-container">
-      <div class="flex-item">
+      <div class="flex-item2">
         <h2>This website is awesome.</h2>
 
         <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
 
         <div class="button">Sign up!</div><!-- For now -->
       </div>
-      <div class="flex-item">
-        <div class=""><img src="https://i.imgur.com/DRciR0h.jpg" /></div>
+      <div class="flex-item2">
+        <div class=""><img src="https://i.imgur.com/DRciR0h.jpg" style="width:25%;" /></div>
       </div>
     </div>
 
