--- a/landing-page.html
+++ b/landing-page.html
@@ -33,10 +33,16 @@
         padding:4px;
       }
 
-      .flex-item-2{
+      .flex-item-2, .flex-footer-content{
         background-color:peachpuff;
         border:4px solid salmon;
         flex:1;
+        padding:4px;
+      }
+
+      .button{
+        background-color:lightpink;
+        border:4px solid purple;
         padding:4px;
       }
 
@@ -65,6 +71,60 @@
       </div>
       <div class="flex-item2">
         <div class=""><img src="https://i.imgur.com/DRciR0h.jpg" style="width:25%;" /></div>
+      </div>
+    </div>
+
+    <div class="flex-container">
+      <div class="flex-item2">
+        <img src="https://i.imgur.com/DRciR0h.jpg" style="width:25%;" />
+
+        <p>This is some subtext under an illustration or image.</p>
+      </div>
+      <div class="flex-item2">
+        <img src="https://i.imgur.com/8rGoB4P.jpg" style="width:25%;" />
+
+        <p>This is some subtext under an illustration or image.</p>
+      </div>
+      <div class="flex-item2">
+        <img src="https://i.imgur.com/J4eSYpp.jpg" style="width:25%;" />
+
+        <p>This is some subtext under an illustration or image.</p>
+      </div>
+      <div class="flex-item2">
+        <img src="https://i.imgur.com/DRciR0h.jpg" style="width:100%;" />
+
+        <p>This is some subtext under an illustration or image.</p>
+      </div>
+    </div>
+
+    <div class="flex-container">
+      <div class="flex-item2">
+        <blockquote><p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe 
+          people will actually read it. Who knows? All I know is that it looks nice.</p>
+
+          <div style="text-align:right;">- Thor, God of Thunder</div>
+        </blockquote>
+      </div>
+    </div>
+
+    <div class="flex-container">
+      <div class="flex-item2 flex-item-container">
+        <div class="flex-footer-content">
+          <h3>Call to action! It's time!</h3>
+
+          <p>Sign up for our product by clicking that button over there!</p>
+
+        </div>
+        <div class="flex-footer-content">
+          <div class="button">Sign up!</div><!-- For now -->
+        </div>
+
+      </div>
+    </div>
+
+    <div class="flex-container">
+      <div class="flex-item2">
+        Copyright &copy; Izagar 2024
       </div>
     </div>
 
