--- a/landing-page.html
+++ b/landing-page.html
@@ -22,6 +22,18 @@
         padding:4px;
       }
 
+      .flex-item h2{
+        font:48px extra-bold #f9FAF8;
+      }
+
+      .flex-item p{
+        font:18px extra-bold #E5E7EB;
+      }
+
+      .flex-item-logo{
+        font:24px #F9FAF8;
+      }
+
       .flex-item-container{
         display:flex;
         justify-content: space-between;
@@ -40,10 +52,38 @@
         padding:4px;
       }
 
+      .information-header-text{
+        font:36px extra-bold #1f2937;
+      }
+
+      .flex-container-quote{
+        background-color:#E5E7EB;
+        padding:16px;
+        /* border:4px solid blue;
+        margin:8px; */
+        display:flex;
+        /* justify-content: space-between; */
+      }
+
+      .flex-container-quote p{
+        font:36px light italic #1F2937;
+      }
+
+      .flex-copyright-container{
+        background-color:#1F2937;
+        padding:16px;
+        /* border:4px solid blue;
+        margin:8px; */
+        display:flex;
+        /* justify-content: space-between; */
+        text-align:center;
+      }
+
       .button{
-        background-color:lightpink;
-        border:4px solid purple;
-        padding:4px;
+        background-color:#3882F6;
+        /* border:4px solid purple; */
+        padding:5px;
+        border-radius: 5px;
       }
 
     </style>
@@ -53,7 +93,7 @@
   <body>
 
     <div class="flex-container">
-      <div class="flex-item">Header Logo</div>
+      <div class="flex-item flex-item-logo">Header Logo</div>
       <div class="flex-item flex-item-container">
         <div class="flex-item-links">header link one</div>
         <div class="flex-item-links">header link two</div>
@@ -75,6 +115,7 @@
     </div>
 
     <div class="flex-container">
+      <div class="flex-item2 information-header-text">Some random information.</div>
       <div class="flex-item2">
         <img src="https://i.imgur.com/DRciR0h.jpg" style="width:25%;" />
 
@@ -97,13 +138,12 @@
       </div>
     </div>
 
-    <div class="flex-container">
+    <div class="flex-container-quote">
       <div class="flex-item2">
-        <blockquote><p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe 
+        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe 
           people will actually read it. Who knows? All I know is that it looks nice.</p>
 
           <div style="text-align:right;">- Thor, God of Thunder</div>
-        </blockquote>
       </div>
     </div>
 
