--- a/landing-page.html
+++ b/landing-page.html
@@ -16,6 +16,7 @@
 
       .flex-container-header{
         background-color:#1f2937;
+        color:white;
         padding:16px;
         /* border:4px solid blue;
         margin:8px; */
@@ -40,7 +41,8 @@
       }
 
       .flex-item-logo{
-        font:24px #F9FAF8;
+        /* font:24px #F9FAF8; */
+        font:24px gold;
       }
 
       .flex-item-container{
@@ -90,6 +92,7 @@
 
       .flex-copyright-container{
         background-color:#1F2937;
+        color:white;
         padding:16px;
         /* border:4px solid blue;
         margin:8px; */
@@ -112,7 +115,7 @@
   <body>
 
     <div class="flex-container-header">
-      <div class="flex-item flex-item-logo">Header Logo</div>
+      <div class="flex-item"><p class="flex-item-logo">Header Logo</p></div>
       <div class="flex-item flex-item-container">
         <div class="flex-item-links">header link one</div>
         <div class="flex-item-links">header link two</div>
