--- a/landing-page.html
+++ b/landing-page.html
@@ -3,8 +3,16 @@
   <head>
     <meta charset="UTF-8">
     <title>Landing Page</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
-    <style >
+    <style>
+
+      .body {
+        font-family: "Roboto", Arial, Helvetica, sans-serif;
+      }
+
       .flex-container{
         background-color:lightblue;
         padding:16px;
@@ -59,12 +67,13 @@
       .flex-item-2, .flex-footer-content{
         /* background-color:peachpuff;
         border:4px solid salmon; */
-        flex:1;
+        flex: 1 1 auto;
         padding:4px;
       }
 
       .information-header-text{
         font:36px extra-bold #1f2937;
+        flex-direction:row;
       }
 
       .flex-container-information{
@@ -154,7 +163,7 @@
         <p>This is some subtext under an illustration or image.</p>
       </div>
       <div class="flex-item2">
-        <img src="https://i.imgur.com/DRciR0h.jpg" style="width:100%;" />
+        <img src="https://i.imgur.com/DRciR0h.jpg" style="width:25%;" />
 
         <p>This is some subtext under an illustration or image.</p>
       </div>
