--- a/landing-page.html
+++ b/landing-page.html
@@ -22,6 +22,15 @@
         justify-content: space-between;
       }
 
+      .flex-container-calltoaction{
+        background-color:white;
+        padding:25px;
+        /* border:4px solid blue; */
+        margin:8px;
+        display:flex;
+        justify-content: space-between;
+      }
+
       .flex-container-header{
         background-color:#1f2937;
         color:white;
@@ -132,7 +141,7 @@
       </div>
     </div>
 
-    <div class="flex-container">
+    <div class="flex-container-header">
       <div class="flex-item2">
         <h2>This website is awesome.</h2>
 
@@ -176,7 +185,7 @@
           <div style="text-align:right;">- Thor, God of Thunder</div>
     </div>
 
-    <div class="flex-container">
+    <div class="flex-container-calltoaction">
       <div class="flex-item2 flex-item-container">
         <div class="flex-footer-content">
           <h3>Call to action! It's time!</h3>
