--- a/landing-page.html
+++ b/landing-page.html
@@ -67,6 +67,17 @@
         justify-content: space-between;
       }
 
+      .flex-item-container-calltoaction{
+        background-color:#3882F6;
+        padding:25px;
+        /* border:4px solid blue; */
+        margin:8px;
+        display:flex;
+        justify-content: space-between;
+        width:85%;
+        align:center;
+      }
+
       .flex-item-links{
         /* background-color:lightgreen;
         border:4px solid green; */
@@ -116,6 +127,10 @@
         margin:8px; */
         display:flex;
         /* justify-content: space-between; */
+        text-align:center;
+      }
+
+      .flex-footer-content, .flex-container-quote, .flex-copyright-container p{
         text-align:center;
       }
 
@@ -182,7 +197,7 @@
         <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe 
           people will actually read it. Who knows? All I know is that it looks nice.</p>
 
-          <div style="text-align:right;">- Thor, God of Thunder</div>
+        <p><div style="text-align:right;">- Thor, God of Thunder</div></p>
     </div>
 
     <div class="flex-container-calltoaction">
@@ -201,7 +216,7 @@
     </div>
 
     <div class="flex-copyright-container">
-        Copyright &copy; Izagar 2024
+        <p>Copyright &copy; Izagar 2024</p>
     </div>
 
   </body>
