--- a/landing-page.html
+++ b/landing-page.html
@@ -65,17 +65,17 @@
       .flex-item-container{
         display:flex;
         justify-content: space-between;
+        width:85%;
       }
 
       .flex-item-container-calltoaction{
         background-color:#3882F6;
         padding:25px;
         /* border:4px solid blue; */
-        margin:8px;
+        margin:0 auto;
         display:flex;
         justify-content: space-between;
-        width:85%;
-        align:center;
+        /* align:center; */
       }
 
       .flex-item-links{
