--- a/landing-page.html
+++ b/landing-page.html
@@ -84,11 +84,23 @@
         padding:4px;
       }
 
-      .flex-item-2, .flex-footer-content{
+      .flex-item-2{
         /* background-color:peachpuff;
         border:4px solid salmon; */
         flex: 1 1 auto;
         padding:4px;
+      }
+
+      .flex-footer-content-left{
+        flex: 1 1 auto;
+        padding:4px;
+        width:90%
+      }
+
+      .flex-footer-content-right{
+        flex: 1 1 auto;
+        padding:4px;
+        width:10%;
       }
 
       .information-header-text{
@@ -202,13 +214,13 @@
 
     <div class="flex-container-calltoaction">
       <div class="flex-item2 flex-item-container">
-        <div class="flex-footer-content">
+        <div class="flex-footer-content-left">
           <h3>Call to action! It's time!</h3>
 
           <p>Sign up for our product by clicking that button over there!</p>
 
         </div>
-        <div class="flex-footer-content">
+        <div class="flex-footer-content-right">
           <div class="button">Sign up!</div><!-- For now -->
         </div>
 
