I hope it works and turns blue now.

--- a/landing-page.html
+++ b/landing-page.html
@@ -63,7 +63,7 @@
         background-color:white;
         padding:25px;
         /* border:4px solid blue; */
-        margin:8px;
+        margin:0 auto;
         display:flex;
         justify-content: space-between;
         width:85%;
@@ -94,13 +94,13 @@
       .flex-footer-content-left{
         flex: 1 1 auto;
         padding:4px;
-        width:90%
+        width:80%
       }
 
       .flex-footer-content-right{
         flex: 1 1 auto;
         padding:4px;
-        width:10%;
+        width:20%;
       }
 
       .information-header-text{
@@ -148,7 +148,7 @@
 
       .button{
         background-color:#3882F6;
-        /* border:4px solid purple; */
+        border:4px solid white;
         padding:5px;
         border-radius: 5px;
       }
@@ -213,7 +213,7 @@
     </div>
 
     <div class="flex-container-calltoaction">
-      <div class="flex-item2 flex-item-container">
+      <div class="flex-item2 flex-item-container-calltoaction">
         <div class="flex-footer-content-left">
           <h3>Call to action! It's time!</h3>
 
