--- a/landing-page.html
+++ b/landing-page.html
@@ -71,11 +71,13 @@
 
       .flex-item-container-calltoaction{
         background-color:#3882F6;
+        color:#E5E7EB;
         padding:25px;
         /* border:4px solid blue; */
         margin:0 auto;
         display:flex;
         justify-content: space-between;
+        width:65%;
       }
 
       .flex-item-links{
@@ -101,6 +103,7 @@
         flex: 1 1 auto;
         padding:4px;
         width:20%;
+        vertical-align: middle;
       }
 
       .information-header-text{
