--- a/landing-page.html
+++ b/landing-page.html
@@ -147,6 +147,7 @@
 
       .flex-footer-content, .flex-container-quote, .flex-copyright-container p{
         text-align:center;
+        margin:0 auto;
       }
 
       .button{
