--- a/landing-page.html
+++ b/landing-page.html
@@ -9,8 +9,9 @@
 
     <style>
 
-      .body {
+      body {
         font-family: "Roboto", Arial, Helvetica, sans-serif;
+        margin:0 auto;
       }
 
       .flex-container{
