I'll see how this works.

--- a/landing-page.html
+++ b/landing-page.html
@@ -146,7 +146,7 @@
         text-align:center;
       }
 
-      .flex-footer-content, .flex-container-quote, .flex-copyright-container p{
+      .flex-footer-content, .flex-container-quote, .flex-copyright-container p span{
         text-align:center;
         margin:0 auto;
       }
@@ -211,10 +211,10 @@
     </div>
 
     <div class="flex-container-quote">
-        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe 
+        <span><p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe 
           people will actually read it. Who knows? All I know is that it looks nice.</p>
 
-        <p><div style="text-align:right;">- Thor, God of Thunder</div></p>
+        <p><div style="text-align:right;">- Thor, God of Thunder</div></p></span>
     </div>
 
     <div class="flex-container-calltoaction">
