--- a/landing-page.html
+++ b/landing-page.html
@@ -146,7 +146,7 @@
         text-align:center;
       }
 
-      .flex-footer-content, .flex-container-quote, .flex-copyright-container p span{
+      .flex-footer-content, .flex-container-quote, .flex-copyright-container p{
         text-align:center;
         margin:0 auto;
       }
