See what this does to the header.

--- a/landing-page.html
+++ b/landing-page.html
@@ -32,6 +32,7 @@
         margin:8px; */
         display:flex;
         justify-content: space-between;
+        width:65%;
       }
 
       .flex-item{
