--- a/landing-page.html
+++ b/landing-page.html
@@ -92,6 +92,10 @@
         padding:4px;
       }
 
+      .flex-item-column{
+        flex-direction:column;
+      }
+
       .flex-item-2{
         /* background-color:peachpuff;
         border:4px solid salmon; */
@@ -180,15 +184,17 @@
 
     <div class="flex-container-header">
       <div class="flex-container-header-box">
-        <div class="flex-item2">
-          <h2>This website is awesome.</h2>
+        <div class="flex-item-column">
+            <div class="flex-item2">
+              <h2>This website is awesome.</h2>
 
-          <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+              <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
 
-          <div class="button">Sign up!</div><!-- For now -->
-        </div>
-        <div class="flex-item2">
-          <div class=""><img src="https://i.imgur.com/DRciR0h.jpg" style="width:25%;" /></div>
+              <div class="button">Sign up!</div><!-- For now -->
+            </div>
+            <div class="flex-item2">
+              <div class=""><img src="https://i.imgur.com/DRciR0h.jpg" style="width:25%;" /></div>
+            </div>
         </div>
       </div>
     </div>
