--- a/landing-page.html
+++ b/landing-page.html
@@ -37,6 +37,7 @@
       .flex-container-header-box {
         width:65%;
         margin:0 auto;
+        display:flex;
       }
 
       .flex-item{
@@ -183,19 +184,17 @@
     </div>
 
     <div class="flex-container-header">
-      <div class="flex-container-header-box">
-        <div class="flex-item-column">
-            <div class="flex-item2">
+      <div class="flex-container-header-box"><!-- hero body content -->
+            <div class="flex-item2"><!-- section -->
               <h2>This website is awesome.</h2>
 
               <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
 
               <div class="button">Sign up!</div><!-- For now -->
             </div>
-            <div class="flex-item2">
+            <div class="flex-item2"><!-- section -->
               <div class=""><img src="https://i.imgur.com/DRciR0h.jpg" style="width:25%;" /></div>
             </div>
-        </div>
       </div>
     </div>
 
