Changes to header, button

--- a/landing-page.html
+++ b/landing-page.html
@@ -104,6 +104,10 @@
         padding:4px;
       }
 
+      .flex-item2-header{
+        width:50%;
+      }
+
       .flex-footer-content-left{
         flex: 1 1 auto;
         padding:4px;
@@ -185,14 +189,14 @@
 
     <div class="flex-container-header">
       <div class="flex-container-header-box"><!-- hero body content -->
-            <div class="flex-item2"><!-- section -->
+            <div class="flex-item2 flex-item2-header"><!-- section -->
               <h2>This website is awesome.</h2>
 
               <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
 
-              <div class="button">Sign up!</div><!-- For now -->
+              <button class="button">Sign up!</button><!-- For now -->
             </div>
-            <div class="flex-item2"><!-- section -->
+            <div class="flex-item2 flex-item2-header"><!-- section -->
               <div class=""><img src="https://i.imgur.com/DRciR0h.jpg" style="width:25%;" /></div>
             </div>
       </div>
@@ -238,7 +242,7 @@
 
         </div>
         <div class="flex-footer-content-right">
-          <div class="button">Sign up!</div><!-- For now -->
+          <button class="button">Sign up!</button><!-- For now -->
         </div>
 
       </div>
