Make header image bigger

--- a/landing-page.html
+++ b/landing-page.html
@@ -196,8 +196,8 @@
 
               <button class="button">Sign up!</button><!-- For now -->
             </div>
-            <div class="flex-item2 flex-item2-header"><!-- section -->
-              <div class=""><img src="https://i.imgur.com/DRciR0h.jpg" style="width:25%;" /></div>
+            <div class="flex-item2 flex-item2-header" style="margin:0 auto;"><!-- section -->
+              <div class=""><img src="https://i.imgur.com/DRciR0h.jpg" style="width:100%;" /></div>
             </div>
       </div>
     </div>
