--- a/landing-page.html
+++ b/landing-page.html
@@ -170,6 +170,7 @@
         border:4px solid white;
         padding:5px;
         border-radius: 5px;
+        width:25%;
       }
 
     </style>
@@ -197,7 +198,7 @@
               <button class="button">Sign up!</button><!-- For now -->
             </div>
             <div class="flex-item2 flex-item2-header" style="margin:0 auto;"><!-- section -->
-              <div class=""><img src="https://i.imgur.com/DRciR0h.jpg" style="width:100%;" /></div>
+              <div class=""><img src="https://i.imgur.com/DRciR0h.jpg" style="width:75%;" /></div>
             </div>
       </div>
     </div>
