--- a/landing-page.html
+++ b/landing-page.html
@@ -167,10 +167,19 @@
 
       .button{
         background-color:#3882F6;
-        border:4px solid white;
         padding:5px;
         border-radius: 5px;
         width:25%;
+        font: bold;
+      }
+
+      .button-calltoaction{
+        background-color:#3882F6;
+        border:4px solid white;
+        padding:5px;
+        border-radius: 5px;
+        width:50%;
+        font: bold;
       }
 
     </style>
@@ -243,7 +252,7 @@
 
         </div>
         <div class="flex-footer-content-right">
-          <button class="button">Sign up!</button><!-- For now -->
+          <button class="button-calltoaction">Sign up!</button><!-- For now -->
         </div>
 
       </div>
