change buttons again

--- a/landing-page.html
+++ b/landing-page.html
@@ -170,7 +170,9 @@
         padding:5px;
         border-radius: 5px;
         width:25%;
-        font: bold;
+        font: 14px bold;
+        border:none;
+        color:white;
       }
 
       .button-calltoaction{
@@ -179,7 +181,7 @@
         padding:5px;
         border-radius: 5px;
         width:50%;
-        font: bold;
+        font: 14px bold;
       }
 
     </style>
