Change button font family

--- a/landing-page.html
+++ b/landing-page.html
@@ -170,7 +170,7 @@
         padding:5px;
         border-radius: 5px;
         width:25%;
-        font: 14px bold;
+        font: 14px bold "Roboto", Arial, Helvetica, sans-serif;;
         border:none;
         color:white;
       }
@@ -181,7 +181,7 @@
         padding:5px;
         border-radius: 5px;
         width:50%;
-        font: 14px bold;
+        font: 14px bold "Roboto", Arial, Helvetica, sans-serif;;
       }
 
     </style>
