--- a/landing-page.html
+++ b/landing-page.html
@@ -239,7 +239,7 @@
     </div>
 
     <div class="flex-container-quote">
-        <span style="width:65%;"><p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe 
+        <span style="width:65%; margin:0 auto;"><p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe 
           people will actually read it. Who knows? All I know is that it looks nice.</p>
 
         <p><div style="text-align:right;">- Thor, God of Thunder</div></p></span>
