--- a/landing-page.html
+++ b/landing-page.html
@@ -12,6 +12,7 @@
       body {
         font-family: "Roboto", Arial, Helvetica, sans-serif;
         margin:0 auto;
+        background-color:black;
       }
 
       .flex-container{
