--- a/landing-page.html
+++ b/landing-page.html
@@ -74,7 +74,7 @@
         margin:0 auto;
         display:flex;
         justify-content: space-between;
-        width:85%;
+        /* width:100%; */
       }
 
       .flex-item-container-calltoaction{
