I'll just make them all the same image.

--- a/landing-page.html
+++ b/landing-page.html
@@ -218,7 +218,7 @@
     <div class="flex-container-information">
       <div class="flex-item2 information-header-text">Some random information.</div>
       <div class="flex-item2">
-        <img src="https://i.imgur.com/DRciR0h.jpg" style="width:100%;" />
+        <img src="https://i.imgur.com/8rGoB4P.jpg" style="width:100%;" />
 
         <p>This is some subtext under an illustration or image.</p>
       </div>
@@ -228,12 +228,12 @@
         <p>This is some subtext under an illustration or image.</p>
       </div>
       <div class="flex-item2">
-        <img src="https://i.imgur.com/J4eSYpp.jpg" style="width:100%;" />
+        <img src="https://i.imgur.com/8rGoB4P.jpg" style="width:100%;" />
 
         <p>This is some subtext under an illustration or image.</p>
       </div>
       <div class="flex-item2">
-        <img src="https://i.imgur.com/DRciR0h.jpg" style="width:100%;" />
+        <img src="https://i.imgur.com/8rGoB4P.jpg" style="width:100%;" />
 
         <p>This is some subtext under an illustration or image.</p>
       </div>
