--- a/landing-page.html
+++ b/landing-page.html
@@ -59,7 +59,7 @@
 
       .flex-item-logo{
         /* font:24px #F9FAF8; */
-        font:24px gold;
+        font:24px gold "Roboto", Arial, Helvetica, sans-serif;
       }
 
       .flex-item-container{
