Maybe this will fix it?

--- a/landing-page.html
+++ b/landing-page.html
@@ -59,7 +59,7 @@
 
       .flex-item-logo{
         /* font:24px #F9FAF8; */
-        font:24px gold "Roboto", Arial, Helvetica, sans-serif;
+        font:24px #ffcc00 extra-bold "Roboto", Arial, Helvetica, sans-serif;
       }
 
       .flex-item-container{
@@ -216,7 +216,7 @@
     </div>
 
     <div class="flex-container-information">
-      <div class="flex-item2 information-header-text">Some random information.</div>
+      <div class="information-header-text"><h2>Some random information.</h2></div>
       <div class="flex-item2">
         <img src="https://i.imgur.com/8rGoB4P.jpg" style="width:100%;" />
 
