--- a/landing-page.html
+++ b/landing-page.html
@@ -133,6 +133,7 @@
         /* border:4px solid blue;
         margin:8px; */
         display:flex;
+        flex-direction: column;
         justify-content: space-between;
       }
 
@@ -217,25 +218,27 @@
 
     <div class="flex-container-information">
       <div class="information-header-text"><h2>Some random information.</h2></div>
-      <div class="flex-item2">
-        <img src="https://i.imgur.com/8rGoB4P.jpg" style="width:100%;" />
+      <div class="information-header-img">
+        <div class="flex-item2">
+          <img src="https://i.imgur.com/8rGoB4P.jpg" style="width:100%;" />
 
-        <p>This is some subtext under an illustration or image.</p>
-      </div>
-      <div class="flex-item2">
-        <img src="https://i.imgur.com/8rGoB4P.jpg" style="width:100%;" />
+          <p>This is some subtext under an illustration or image.</p>
+        </div>
+        <div class="flex-item2">
+          <img src="https://i.imgur.com/8rGoB4P.jpg" style="width:100%;" />
 
-        <p>This is some subtext under an illustration or image.</p>
-      </div>
-      <div class="flex-item2">
-        <img src="https://i.imgur.com/8rGoB4P.jpg" style="width:100%;" />
+          <p>This is some subtext under an illustration or image.</p>
+        </div>
+        <div class="flex-item2">
+          <img src="https://i.imgur.com/8rGoB4P.jpg" style="width:100%;" />
 
-        <p>This is some subtext under an illustration or image.</p>
-      </div>
-      <div class="flex-item2">
-        <img src="https://i.imgur.com/8rGoB4P.jpg" style="width:100%;" />
+          <p>This is some subtext under an illustration or image.</p>
+        </div>
+        <div class="flex-item2">
+          <img src="https://i.imgur.com/8rGoB4P.jpg" style="width:100%;" />
 
-        <p>This is some subtext under an illustration or image.</p>
+          <p>This is some subtext under an illustration or image.</p>
+        </div>
       </div>
     </div>
 
