maybe this will work.

--- a/landing-page.html
+++ b/landing-page.html
@@ -127,6 +127,11 @@
         flex-direction:row;
       }
 
+      .information-header-img{
+        font:36px extra-bold #1f2937;
+        display:flex;
+      }
+
       .flex-container-information{
         background-color:white;
         padding:16px;
