--- a/landing-page.html
+++ b/landing-page.html
@@ -224,27 +224,29 @@
     </div>
 
     <div class="flex-container-information">
-      <div class="information-header-text"><span style="width:65%; margin:0 auto;"><h2>Some random information.</h2></span></div>
-      <div class="information-header-img">
-        <div class="flex-item2">
-          <img src="https://i.imgur.com/8rGoB4P.jpg" style="width:100%;" />
+      <div class="width:65%; margin:0 auto;">  
+        <div class="information-header-text"><h2>Some random information.</h2></div>
+        <div class="information-header-img">
+          <div class="flex-item2">
+            <img src="https://i.imgur.com/8rGoB4P.jpg" style="width:100%;" />
 
-          <p>This is some subtext under an illustration or image.</p>
-        </div>
-        <div class="flex-item2">
-          <img src="https://i.imgur.com/8rGoB4P.jpg" style="width:100%;" />
+            <p>This is some subtext under an illustration or image.</p>
+          </div>
+          <div class="flex-item2">
+            <img src="https://i.imgur.com/8rGoB4P.jpg" style="width:100%;" />
 
-          <p>This is some subtext under an illustration or image.</p>
-        </div>
-        <div class="flex-item2">
-          <img src="https://i.imgur.com/8rGoB4P.jpg" style="width:100%;" />
+            <p>This is some subtext under an illustration or image.</p>
+          </div>
+          <div class="flex-item2">
+            <img src="https://i.imgur.com/8rGoB4P.jpg" style="width:100%;" />
 
-          <p>This is some subtext under an illustration or image.</p>
-        </div>
-        <div class="flex-item2">
-          <img src="https://i.imgur.com/8rGoB4P.jpg" style="width:100%;" />
+            <p>This is some subtext under an illustration or image.</p>
+          </div>
+          <div class="flex-item2">
+            <img src="https://i.imgur.com/8rGoB4P.jpg" style="width:100%;" />
 
-          <p>This is some subtext under an illustration or image.</p>
+            <p>This is some subtext under an illustration or image.</p>
+          </div>
         </div>
       </div>
     </div>
