--- a/landing-page.html
+++ b/landing-page.html
@@ -198,7 +198,7 @@
   <body>
 
     <div class="flex-container-header">
-      <div class="flex-container-header-box"></div>
+      <div class="flex-container-header-box">
         <div class="flex-item"><p class="flex-item-logo">Header Logo</p></div>
         <div class="flex-item flex-item-container">
           <div class="flex-item-links">header link one</div>
