Maybe that will fix it finally.

--- a/landing-page.html
+++ b/landing-page.html
@@ -224,7 +224,7 @@
     </div>
 
     <div class="flex-container-information">
-      <div class="width:65%; margin:0 auto;">  
+      <div style="width:65%; margin:0 auto;">  
         <div class="information-header-text"><h2>Some random information.</h2></div>
         <div class="information-header-img">
           <div class="flex-item2">
