--- a/landing-page.html
+++ b/landing-page.html
@@ -152,7 +152,7 @@
         text-align:center;
       }
 
-      .flex-container-quote p{
+      .flex-container-quote span{
         font:36px light italic #1F2937;
       }
 
