--- a/landing-page.html
+++ b/landing-page.html
@@ -225,7 +225,7 @@
 
     <div class="flex-container-information">
       <div style="width:65%; margin:0 auto;">  
-        <div class="information-header-text"><span style="width:65%; margin:0 auto;"><h2>Some random information.</h2></span></div>
+        <div class="information-header-text"><span style="margin:0 auto;"><h2>Some random information.</h2></span></div>
         <div class="information-header-img">
           <div class="flex-item2">
             <img src="https://i.imgur.com/8rGoB4P.jpg" style="width:100%;" />
