--- a/landing-page.html
+++ b/landing-page.html
@@ -153,7 +153,10 @@
       }
 
       .flex-container-quote span{
-        font:36px light italic #1F2937;
+        font-size:36px;
+        font-weight: normal,
+        font-style:italic;
+        color: #1f2937;
       }
 
       .flex-copyright-container{
@@ -177,7 +180,7 @@
         padding:5px;
         border-radius: 5px;
         width:25%;
-        font: 14px bold "Roboto", Arial, Helvetica, sans-serif;;
+        font: 14px bold "Roboto", Arial, Helvetica, sans-serif;
         border:none;
         color:white;
       }
@@ -188,7 +191,7 @@
         padding:5px;
         border-radius: 5px;
         width:50%;
-        font: 14px bold "Roboto", Arial, Helvetica, sans-serif;;
+        font: 14px bold "Roboto", Arial, Helvetica, sans-serif;
       }
 
     </style>
@@ -225,7 +228,7 @@
 
     <div class="flex-container-information">
       <div style="width:65%; margin:0 auto;">  
-        <div class="information-header-text"><span style="margin:0 auto;"><h2>Some random information.</h2></span></div>
+        <div class="information-header-text"><span style="text-align:center;"><h2>Some random information.</h2></span></div>
         <div class="information-header-img">
           <div class="flex-item2">
             <img src="https://i.imgur.com/8rGoB4P.jpg" style="width:100%;" />
