--- a/landing-page.html
+++ b/landing-page.html
@@ -59,7 +59,10 @@
 
       .flex-item-logo{
         /* font:24px #F9FAF8; */
-        font:24px #ffcc00 extra-bold "Roboto", Arial, Helvetica, sans-serif;
+        font-size:24px;
+        color:#ffcc00
+        font-weight:extra-bold;
+        font-family:"Roboto", Arial, Helvetica, sans-serif;
       }
 
       .flex-item-container{
@@ -152,7 +155,7 @@
         text-align:center;
       }
 
-      .flex-container-quote span{
+      .flex-container-quote p{
         font-size:36px;
         font-weight: normal,
         font-style:italic;
