--- a/landing-page.html
+++ b/landing-page.html
@@ -61,7 +61,7 @@
         /* font:24px #F9FAF8; */
         font-size:24px;
         color:#ffcc00
-        font-weight:extra-bold;
+        font-weight:900;
         font-family:"Roboto", Arial, Helvetica, sans-serif;
       }
 
