--- a/landing-page.html
+++ b/landing-page.html
@@ -50,17 +50,21 @@
       }
 
       .flex-item h2{
-        font:48px extra-bold #f9FAF8;
+        font:48px;
+        font-weight:900;
+        color:#f9FAF8;
       }
 
       .flex-item p{
-        font:18px extra-bold #E5E7EB;
+        font-size:18px;
+        font-weight:900;
+        color:#E5E7EB;
       }
 
       .flex-item-logo{
         /* font:24px #F9FAF8; */
         font-size:24px;
-        color:#ffcc00
+        /* color:#ffcc00; */
         font-weight:900;
         font-family:"Roboto", Arial, Helvetica, sans-serif;
       }
@@ -157,7 +161,7 @@
 
       .flex-container-quote p{
         font-size:36px;
-        font-weight: normal,
+        font-weight: normal;
         font-style:italic;
         color: #1f2937;
       }
