center some text

--- a/landing-page.html
+++ b/landing-page.html
@@ -112,6 +112,10 @@
         padding:4px;
       }
 
+      .flex-item2-p{
+        text-align:center;
+      }
+
       .flex-item2-header{
         width:50%;
       }
@@ -240,22 +244,22 @@
           <div class="flex-item2">
             <img src="https://i.imgur.com/8rGoB4P.jpg" style="width:100%;" />
 
-            <p>This is some subtext under an illustration or image.</p>
+            <p class="flex-item2-p">This is some subtext under an illustration or image.</p>
           </div>
           <div class="flex-item2">
             <img src="https://i.imgur.com/8rGoB4P.jpg" style="width:100%;" />
 
-            <p>This is some subtext under an illustration or image.</p>
+            <p class="flex-item2-p">This is some subtext under an illustration or image.</p>
           </div>
           <div class="flex-item2">
             <img src="https://i.imgur.com/8rGoB4P.jpg" style="width:100%;" />
 
-            <p>This is some subtext under an illustration or image.</p>
+            <p class="flex-item2-p">This is some subtext under an illustration or image.</p>
           </div>
           <div class="flex-item2">
             <img src="https://i.imgur.com/8rGoB4P.jpg" style="width:100%;" />
 
-            <p>This is some subtext under an illustration or image.</p>
+            <p class="flex-item2-p">This is some subtext under an illustration or image.</p>
           </div>
         </div>
       </div>
