try to fix the quote again

--- a/landing-page.html
+++ b/landing-page.html
@@ -123,7 +123,8 @@
       .flex-footer-content-left{
         flex: 1 1 auto;
         padding:4px;
-        width:80%
+        width:80%;
+        margin:0 auto;
       }
 
       .flex-footer-content-right{
@@ -131,6 +132,8 @@
         padding:4px;
         width:20%;
         vertical-align: middle;
+        margin:0 auto;
+        color:white;
       }
 
       .information-header-text{
