--- a/landing-page.html
+++ b/landing-page.html
@@ -205,7 +205,10 @@
         padding:5px;
         border-radius: 5px;
         width:50%;
-        font: 14px bold "Roboto", Arial, Helvetica, sans-serif;
+        font-size:14px;
+        font-weight:bold;
+        font-family: "Roboto", Arial, Helvetica, sans-serif;
+        text-align:center;
       }
 
     </style>
@@ -285,7 +288,7 @@
 
           </div>
           <div class="flex-footer-content-right">
-            <button class="button-calltoaction">Sign up!</button><!-- For now -->
+            <span style="verticle-align:middle;"><button class="button-calltoaction">Sign up!</button></span>
           </div>
         </div>
       </div>
