--- a/landing-page.html
+++ b/landing-page.html
@@ -194,7 +194,9 @@
         padding:5px;
         border-radius: 5px;
         width:25%;
-        font: 14px bold "Roboto", Arial, Helvetica, sans-serif;
+        font-size:14px;
+        font-weight: bold;
+        font-family: "Roboto", Arial, Helvetica, sans-serif;
         border:none;
         color:white;
       }
@@ -288,7 +290,7 @@
 
           </div>
           <div class="flex-footer-content-right">
-            <span style="verticle-align:middle;"><button class="button-calltoaction">Sign up!</button></span>
+            <span style="vertical-align: middle;"><button class="button-calltoaction">Sign up!</button></span>
           </div>
         </div>
       </div>
