--- a/landing-page.html
+++ b/landing-page.html
@@ -131,9 +131,9 @@
         flex: 1 1 auto;
         padding:4px;
         width:20%;
-        vertical-align: middle;
         margin:0 auto;
         color:white;
+        text-align:center;
       }
 
       .information-header-text{
