See if this works

--- a/landing-page.html
+++ b/landing-page.html
@@ -240,7 +240,7 @@
               <button class="button">Sign up!</button><!-- For now -->
             </div>
             <div class="flex-item2 flex-item2-header" style="margin:0 auto;"><!-- section -->
-              <div class=""><img src="https://i.imgur.com/DRciR0h.jpg" style="width:75%;" /></div>
+              <div style="text-align:center;"><img src="https://i.imgur.com/DRciR0h.jpg" style="width:75%;" /></div>
             </div>
       </div>
     </div>
@@ -284,9 +284,9 @@
       <div class="flex-item2">
           <div class="flex-item-container-calltoaction">
           <div class="flex-footer-content-left">
-            <h3>Call to action! It's time!</h3>
+            <span style="width:50%;"><h3>Call to action! It's time!</h3>
 
-            <p>Sign up for our product by clicking that button over there!</p>
+            <p>Sign up for our product by clicking that button over there!</p></span>
 
           </div>
           <div class="flex-footer-content-right">
