--- a/landing-page.html
+++ b/landing-page.html
@@ -125,6 +125,7 @@
         padding:4px;
         width:80%;
         margin:0 auto;
+        display: flex;
       }
 
       .flex-footer-content-right{
@@ -134,6 +135,7 @@
         margin:0 auto;
         color:white;
         text-align:center;
+        display: flex;
       }
 
       .information-header-text{
