--- a/landing-page.html
+++ b/landing-page.html
@@ -208,11 +208,12 @@
         border:4px solid white;
         padding:5px;
         border-radius: 5px;
-        width:50%;
+        width:100%;
         font-size:14px;
         font-weight:bold;
         font-family: "Roboto", Arial, Helvetica, sans-serif;
         text-align:center;
+        color:white;
       }
 
     </style>
