I add this here?

--- a/landing-page.html
+++ b/landing-page.html
@@ -93,6 +93,8 @@
         display:flex;
         justify-content: space-between;
         width:65%;
+        flex-direction:column;
+        justify-content:center;
       }
 
       .flex-item-links{
