--- a/landing-page.html
+++ b/landing-page.html
@@ -90,9 +90,10 @@
         padding:25px;
         /* border:4px solid blue; */
         margin:0 auto;
-        display:flex;
         justify-content: space-between;
         width:65%;
+        display:flex;
+        flex: 1 1 auto;
         flex-direction:column;
         justify-content:center;
       }
@@ -295,7 +296,7 @@
 
           </div>
           <div class="flex-footer-content-right">
-            <span style="vertical-align: middle;"><button class="button-calltoaction">Sign up!</button></span>
+            <button class="button-calltoaction">Sign up!</button>
           </div>
         </div>
       </div>
