--- a/landing-page.html
+++ b/landing-page.html
@@ -90,12 +90,11 @@
         padding:25px;
         /* border:4px solid blue; */
         margin:0 auto;
-        justify-content: space-between;
+        justify-content: center;
         width:65%;
         display:flex;
         flex: 1 1 auto;
-        flex-direction:column;
-        justify-content:center;
+        /* flex-direction:column; *;
       }
 
       .flex-item-links{
@@ -290,9 +289,9 @@
       <div class="flex-item2">
           <div class="flex-item-container-calltoaction">
           <div class="flex-footer-content-left">
-            <span style="width:50%;"><h3>Call to action! It's time!</h3>
+            <h3>Call to action! It's time!</h3>
 
-            <p>Sign up for our product by clicking that button over there!</p></span>
+            <p>Sign up for our product by clicking that button over there!</p>
 
           </div>
           <div class="flex-footer-content-right">
