--- a/landing-page.html
+++ b/landing-page.html
@@ -90,7 +90,7 @@
         padding:25px;
         /* border:4px solid blue; */
         margin:0 auto;
-        justify-content: center;
+        justify-content: center space-between;
         width:65%;
         display:flex;
         flex: 1 1 auto;
