--- a/landing-page.html
+++ b/landing-page.html
@@ -82,6 +82,7 @@
         display:flex;
         justify-content: space-between;
         /* width:100%; */
+        height:100px;
       }
 
       .flex-item-container-calltoaction{
@@ -127,7 +128,7 @@
         padding:4px;
         width:80%;
         margin:0 auto;
-        display: flex;
+        display: table-cell;
       }
 
       .flex-footer-content-right{
@@ -137,7 +138,7 @@
         margin:0 auto;
         color:white;
         text-align:center;
-        display: flex;
+        display: table-cell;
       }
 
       .information-header-text{
