idk if this fixes it...

--- a/landing-page.html
+++ b/landing-page.html
@@ -296,7 +296,7 @@
 
           </div>
           <div class="flex-footer-content-right">
-            <button class="button-calltoaction">Sign up!</button>
+            <span style="vertical-align: middle; text-align: center;"><button class="button-calltoaction">Sign up!</button></span>
           </div>
         </div>
       </div>
