--- a/landing-page.html
+++ b/landing-page.html
@@ -95,7 +95,7 @@
         width:65%;
         display:flex;
         flex: 1 1 auto;
-        /* flex-direction:column; *;
+        /* flex-direction:column; */;
       }
 
       .flex-item-links{
