See how the CSS looks for now. Eh,

--- a/landing-page-2.html
+++ b/landing-page-2.html
@@ -6,15 +6,131 @@
 
     <style>
 
+      /* Body and Background */
+
+      body {
+        background-color:#1F2937;
+        margin:0 auto;
+      }
+
+      /* Top Navigation Section */
+
+      .navigation-container {
+
+      }
+
+      .navigation-secondary-container {
+        width:85%;
+      }
+
+      .navigation-item {
+        font-size:24px;
+        color:#F9FAF8;
+      }
+
+      .navigation-item-links {
+        font-size:18px;
+        color:#E5E7EB;
+      }
+
+
       /* Header Section */
+
+      .header-container {
+
+      }
+
+      .header-secondary-container {
+        width:85%;
+      }
+
+      .header-info-container {
+
+      }
+
+      .header-info-container h2{
+        font-size:48px;
+        font-weight:extra-bold;
+        color:#F9FAF8;
+      }
 
       /* Random Information Section */
 
+      .information-container{
+
+      }
+
+      .information-secondary-container{
+        width:85%;
+      }
+
+      .information-header-text{
+        font-size:36px;
+        font-weight:extra-bold;
+        color:#1F2937;
+      }
+
+      .information-column{
+
+      }
+
+      .information-column-item{
+
+      }
+
+      .information-column-item-p {
+
+      }
+
       /* Quote Section */
+
+      .quote-container{
+        background-color:#E5E7EB;
+        font-size:36px;
+        font-weight:light;
+        font-style: italic;
+        color:#1F2937;
+      }
 
       /* Call to Action Section */
 
+      .calltoaction-container{
+        background-color:#FFFFFF;
+      }
+
+      .calltoaction-secondary-container{
+        width:85%;
+      }
+
+      .calltoaction-blue-container{
+        background-color:#3882F6;
+      }
+
+      .calltoaction-blue-container-left{
+
+      }
+
+      .calltoaction-blue-container-right{
+        display:flex-column;
+        vertical-align: middle;
+        text-align: center;
+      }
+
+      .calltoaction-button{
+
+      }
+
       /* Footer */
+
+      .footer {
+        background-color:#1F2937;
+      }
+
+      /* Other */
+
+      .button{
+        background-color:#3882F6;
+      }
 
     </style>
   </head>
@@ -34,14 +150,14 @@
 
     <div class="header-container">
       <div class="header-secondary-container">
-        <div class="header-header-container">
+        <div class="header-info-container">
           <h2>This website is awesome.</h2>
 
           <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is a lower contrast.</p>
 
           <button class="button">Sign up!</button>
         </div>
-        <div class="header-header-container">
+        <div class="header-info-container">
           <div><img src="" style="width:75%;" /></div>
         </div>
       </div>
