--- a/landing-page-2.html
+++ b/landing-page-2.html
@@ -16,11 +16,12 @@
       /* Top Navigation Section */
 
       .navigation-container {
-
+        display:flex;
       }
 
       .navigation-secondary-container {
         width:85%;
+        display:flex;
       }
 
       .navigation-item {
@@ -37,11 +38,12 @@
       /* Header Section */
 
       .header-container {
-
+        display:flex;
       }
 
       .header-secondary-container {
         width:85%;
+        display:flex;
       }
 
       .header-info-container {
@@ -57,29 +59,32 @@
       /* Random Information Section */
 
       .information-container{
-
+        display:flex;
       }
 
       .information-secondary-container{
         width:85%;
+        display:flex;
       }
 
       .information-header-text{
         font-size:36px;
         font-weight:extra-bold;
         color:#1F2937;
+        display:flex;
       }
 
       .information-column{
-
+        display:flex;
+        flex-direction: column;
       }
 
       .information-column-item{
-
+        display:flex;
       }
 
       .information-column-item-p {
-
+        font-size:14px;
       }
 
       /* Quote Section */
@@ -96,14 +101,19 @@
 
       .calltoaction-container{
         background-color:#FFFFFF;
+        display:flex;
       }
 
       .calltoaction-secondary-container{
         width:85%;
+        display:flex;
       }
 
       .calltoaction-blue-container{
+        margin:0 auto;
+        width:85%;
         background-color:#3882F6;
+        display:flex;
       }
 
       .calltoaction-blue-container-left{
