--- a/landing-page-2.html
+++ b/landing-page-2.html
@@ -27,11 +27,14 @@
       .navigation-item {
         font-size:24px;
         color:#F9FAF8;
+        display:flex;
+        flex-direction: column;
       }
 
       .navigation-item-links {
         font-size:18px;
         color:#E5E7EB;
+        display:flex;
       }
 
 
@@ -44,6 +47,7 @@
       .header-secondary-container {
         width:85%;
         display:flex;
+        justify-content:center;
       }
 
       .header-info-container {
@@ -77,6 +81,7 @@
       .information-column{
         display:flex;
         flex-direction: column;
+        justify-content: space-between;
       }
 
       .information-column-item{
@@ -102,6 +107,7 @@
       .calltoaction-container{
         background-color:#FFFFFF;
         display:flex;
+        justify-content:center;
       }
 
       .calltoaction-secondary-container{
@@ -121,7 +127,8 @@
       }
 
       .calltoaction-blue-container-right{
-        display:flex-column;
+        display:flex;
+        flex-direction:column;
         vertical-align: middle;
         text-align: center;
       }
