--- a/landing-page-2.html
+++ b/landing-page-2.html
@@ -16,7 +16,7 @@
       .main-container {
         margin:0 auto;
         width:85%;
-        display:flex;
+        /* display:flex; */
       }
 
       /* Top Navigation Section */
