--- a/landing-page-2.html
+++ b/landing-page-2.html
@@ -35,6 +35,7 @@
         color:#F9FAF8;
         display:flex;
         flex-direction: column;
+        justify-content: space-evenly;
       }
 
       .navigation-item-links {
@@ -69,7 +70,7 @@
       /* Random Information Section */
 
       .information-container{
-        backround-color:#F9FAF8;
+        background-color:#F9FAF8;
         display:flex;
       }
 
