--- a/landing-page-2.html
+++ b/landing-page-2.html
@@ -22,6 +22,7 @@
       /* Top Navigation Section */
 
       .navigation-container {
+        margin:0 auto;
         display:flex;
       }
 
@@ -48,6 +49,7 @@
       /* Header Section */
 
       .header-container {
+        margin:0 auto;
         display:flex;
       }
 
@@ -70,6 +72,7 @@
       /* Random Information Section */
 
       .information-container{
+        margin:0 auto;
         background-color:#F9FAF8;
         display:flex;
       }
@@ -103,6 +106,7 @@
       /* Quote Section */
 
       .quote-container{
+        margin:0 auto;
         background-color:#E5E7EB;
         font-size:36px;
         font-weight:light;
@@ -113,6 +117,7 @@
       /* Call to Action Section */
 
       .calltoaction-container{
+        margin:0 auto;
         background-color:#FFFFFF;
         display:flex;
         justify-content:center;
@@ -131,7 +136,7 @@
       }
 
       .calltoaction-blue-container-left{
-
+        color:#F9FAF8;
       }
 
       .calltoaction-blue-container-right{
@@ -149,6 +154,7 @@
 
       .footer {
         background-color:#1F2937;
+        justify-content: center;
       }
 
       /* Other */
