width:100%; so no body bg.

--- a/landing-page-2.html
+++ b/landing-page-2.html
@@ -23,6 +23,7 @@
 
       .navigation-container {
         margin:0 auto;
+        width:100%;
         display:flex;
       }
 
@@ -49,6 +50,7 @@
       /* Header Section */
 
       .header-container {
+        width:100%;
         margin:0 auto;
         display:flex;
       }
@@ -72,6 +74,7 @@
       /* Random Information Section */
 
       .information-container{
+        width:100%;
         margin:0 auto;
         background-color:#F9FAF8;
         display:flex;
@@ -106,6 +109,7 @@
       /* Quote Section */
 
       .quote-container{
+        width:100%;
         margin:0 auto;
         background-color:#E5E7EB;
         font-size:36px;
@@ -117,6 +121,7 @@
       /* Call to Action Section */
 
       .calltoaction-container{
+        width:100%;
         margin:0 auto;
         background-color:#FFFFFF;
         display:flex;
@@ -154,6 +159,7 @@
 
       .footer {
         background-color:#1F2937;
+        width:100%;
         justify-content: center;
       }
 
