secondary containers: adding margin. Then fixing the footer.

--- a/landing-page-2.html
+++ b/landing-page-2.html
@@ -28,6 +28,7 @@
       }
 
       .navigation-secondary-container {
+        margin:0 auto;
         width:85%;
         display:flex;
       }
@@ -56,6 +57,7 @@
       }
 
       .header-secondary-container {
+        margin:0 auto;
         width:85%;
         display:flex;
         justify-content:center;
@@ -81,6 +83,7 @@
       }
 
       .information-secondary-container{
+        margin:0 auto;
         width:85%;
         display:flex;
       }
@@ -129,6 +132,7 @@
       }
 
       .calltoaction-secondary-container{
+        margin:0 auto;
         width:85%;
         display:flex;
       }
@@ -160,7 +164,8 @@
       .footer {
         background-color:#1F2937;
         width:100%;
-        justify-content: center;
+        text-align: center;
+        color:#F9FAF8;
       }
 
       /* Other */
