--- a/landing-page-2.html
+++ b/landing-page-2.html
@@ -239,10 +239,10 @@
 
       <div class="quote-container">
         <!-- Fix this later -->
-        <span style="width:95%; margin:0 auto;"><p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe 
+        <div style="width:95%; margin:0 auto;"><p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe 
           people will actually read it. Who knows? All I know is that it looks nice.</p>
 
-        <p><div style="text-align:right;">- Thor, God of Thunder</div></p></span>
+        <p><div style="text-align:right;">- Thor, God of Thunder</div></p></div>
 
       </div>
 
