--- a/landing-page-2.html
+++ b/landing-page-2.html
@@ -97,7 +97,7 @@
 
       .information-column{
         display:flex;
-        flex-direction: column;
+        flex-direction: row;
         justify-content: space-between;
       }
 
