Fixing Call to Action

--- a/landing-page-2.html
+++ b/landing-page-2.html
@@ -131,6 +131,8 @@
         width:85%;
         background-color:#3882F6;
         display:flex;
+        padding:5px;
+        /* border-radius: 10px; */
       }
 
       .calltoaction-blue-container-left{
@@ -237,7 +239,7 @@
       </div>
 
       <div class="calltoaction-container">
-        <div class="section">
+        <div class="section" style="padding:5px;">
           <div class="calltoaction-blue-container">
             <div class="calltoaction-blue-container-left">
               <h3>Call to action! It's time!</h3>
@@ -245,7 +247,7 @@
               <p>Sign up for our product by clicking that button over there!</p>
             </div>
             <div class="calltoaction-blue-container-right">
-              <button class="calltoaction-button">Sign up!</button>
+              <span><button class="calltoaction-button">Sign up!</button></span>
             </div>
           </div>
         </div>
