Fix the header?

--- a/landing-page-2.html
+++ b/landing-page-2.html
@@ -75,7 +75,7 @@
       .header-info-container h2{
         font-size:48px;
         font-weight:extra-bold;
-        color:#F9FAF8;
+        color:#F9FAF8 !important;
       }
 
       /* Random Information Section */
@@ -197,7 +197,7 @@
             <button class="button">Sign up!</button>
           </div>
           <div class="header-info-container">
-            <div><img src="https://i.imgur.com/DRciR0h.jpg" style="width:25%;" /></div>
+            <div><img src="https://i.imgur.com/DRciR0h.jpg" style="width:25%; height:100%;" /></div>
           </div>
         </div>
       </div>
