--- a/landing-page-2.html
+++ b/landing-page-2.html
@@ -74,7 +74,7 @@
 
       .header-info-container h2{
         font-size:48px;
-        font-weight:extra-bold;
+        font-weight:bolder;
         color:#F9FAF8 !important;
       }
 
@@ -89,7 +89,7 @@
 
       .information-header-text{
         font-size:36px;
-        font-weight:extra-bold;
+        font-weight:bolder;
         color:#1F2937;
         display:flex;
       }
