--- a/landing-page-2.html
+++ b/landing-page-2.html
@@ -42,7 +42,7 @@
         font-size:24px;
         color:#F9FAF8;
         display:flex;
-        flex-direction: column;
+        flex-direction: row;
         justify-content: space-evenly;
       }
 
@@ -50,6 +50,7 @@
         font-size:18px;
         color:#E5E7EB;
         display:flex;
+
       }
 
 
