--- a/landing-page-2.html
+++ b/landing-page-2.html
@@ -44,6 +44,8 @@
         display:flex;
         flex-direction: row;
         justify-content: space-evenly;
+        padding:5px;
+        vertical-align: middle;
       }
 
       .navigation-item-links {
