--- a/landing-page-2.html
+++ b/landing-page-2.html
@@ -52,7 +52,6 @@
         font-size:18px;
         color:#E5E7EB;
         display:flex;
-
       }
 
 
@@ -95,6 +94,11 @@
         font-weight:bolder;
         color:#1F2937;
         display:flex;
+      }
+
+      .information-section{
+        display:flex;
+        flex-direction:column;
       }
 
       .information-column{
@@ -206,7 +210,7 @@
       </div>
 
       <div class="information-container">
-        <div class="section">
+        <div class="section information-section">
           <div class="information-header-text">
             <span>Some random information.</span>
           </div>
