Using Raycat's code

--- a/landing-page-2.html
+++ b/landing-page-2.html
@@ -72,6 +72,9 @@
 
       .header-info-container {
         width:50%;
+        display: flex;
+        justify-content:flex-end;
+        align-items:center;
       }
 
       .header-info-container h2{
@@ -93,12 +96,6 @@
         font-size:36px;
         font-weight:bolder;
         color:#1F2937;
-        display:flex;
-      }
-
-      .information-section{
-        display:flex;
-        flex-direction:column;
       }
 
       .information-column{
@@ -210,10 +207,8 @@
       </div>
 
       <div class="information-container">
-        <div class="section information-section">
-          <div class="information-header-text">
-            <span>Some random information.</span>
-          </div>
+        <div class="section">
+          <h2 class="information-header-text">Some random information.</h2>
         </div>
         <div class="information-column">
           <div class="information-column-item">
