--- a/landing-page-2.html
+++ b/landing-page-2.html
@@ -67,7 +67,7 @@
         margin:0 auto;
         width:85%;
         display:flex;
-        justify-content:center;
+        /* justify-content:center; */
       }
 
       .header-info-container {
