Fixing the header and information sections.

--- a/landing-page-2.html
+++ b/landing-page-2.html
@@ -75,6 +75,7 @@
         display: flex;
         justify-content:flex-end;
         align-items:center;
+        flex-direction: column;
       }
 
       .header-info-container h2{
@@ -106,6 +107,7 @@
 
       .information-column-item{
         display:flex;
+        display:column;
       }
 
       .information-column-item-p {
