--- a/landing-page-2.html
+++ b/landing-page-2.html
@@ -76,6 +76,8 @@
         justify-content:flex-end;
         align-items:center;
         flex-direction: column;
+        vertical-align: top;
+        text-align: left;
       }
 
       .header-info-container h2{
@@ -203,7 +205,7 @@
             <button class="button">Sign up!</button>
           </div>
           <div class="header-info-container">
-            <div><img src="https://i.imgur.com/DRciR0h.jpg" style="width:25%; height:100%;" /></div>
+            <div><img src="https://i.imgur.com/DRciR0h.jpg" style="width:100%;" /></div>
           </div>
         </div>
       </div>
