Let's comment this out.

--- a/landing-page-2.html
+++ b/landing-page-2.html
@@ -74,8 +74,8 @@
       .header-info-container {
         width:50%;
         display: flex;
-        justify-content:flex-end;
-        align-items:center;
+        /* justify-content:flex-end;
+        align-items:center; */
         flex-direction: column;
         vertical-align: top;
         text-align: left;
