Fix the button.

--- a/landing-page-2.html
+++ b/landing-page-2.html
@@ -176,6 +176,9 @@
 
       .button{
         background-color:#3882F6;
+        border:solid 3px #E5E7EB;
+        width:fit-content;
+        border-radius:5px;
       }
 
     </style>
@@ -206,7 +209,7 @@
             <button class="button">Sign up!</button>
           </div>
           <div class="header-info-container">
-            <div><img src="https://i.imgur.com/DRciR0h.jpg" style="width:50%;" /></div>
+            <div><img src="https://i.imgur.com/DRciR0h.jpg" style="width:100%;" /></div>
           </div>
         </div>
       </div>
