--- a/landing-page-2.html
+++ b/landing-page-2.html
@@ -209,7 +209,7 @@
             <button class="button">Sign up!</button>
           </div>
           <div class="header-info-container">
-            <div><img src="https://i.imgur.com/DRciR0h.jpg" style="width:100%;" /></div>
+            <div style="align-content: center;"><img src="https://i.imgur.com/DRciR0h.jpg" style="width:75%;" /></div>
           </div>
         </div>
       </div>
