Okay let's try this.

--- a/landing-page-2.html
+++ b/landing-page-2.html
@@ -102,6 +102,13 @@
         color:#1F2937;
       }
 
+      .information-section{
+        margin:0 auto;
+        width:85%;
+        justify-content: space-between;
+        align-items: center;
+      }
+
       .information-column{
         display:flex;
         flex-direction: row;
@@ -215,9 +222,8 @@
       </div>
 
       <div class="information-container">
-        <div class="section">
+        <div class="section information-section">
           <h2 class="information-header-text">Some random information.</h2>
-            <div class="section"><!-- ?? -->
               <div class="information-column">
                 <div class="information-column-item">
                   <img src="https://i.imgur.com/8rGoB4P.jpg" style="width:25%" />
@@ -240,7 +246,6 @@
                   <p class="information-column-item-p">This is some subtext under an illustration or image.</p>
                 </div>
               </div>
-            </div>
         </div>
       </div>
 
